--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,27 @@
+/* Container */
+.custom-container {
+  max-width: 600px;
+  border: 5px solid rgb(4, 255, 4);
+  background-color: rgb(41, 0, 0);
+}
 
-/* Your CSS Code here. */
+/* Rows */
+.custom-row {
+  border: 5px solid rgb(255, 188, 188);
+  height: 200px;
+}
+
+/* Columns */
+.custom-col {
+  border: 2px dotted rgb(38, 38, 43);
+}
+
+/* Individual column colors */
+.row1-col1 { background-color: teal; }
+.row1-col2 { background-color: thistle; }
+
+.row2-col1 { background-color: tomato; }
+.row2-col2 { background-color: turquoise; }
+
+.row3-col1 { background-color: violet; }
+.row3-col2 { background-color: yellowgreen; }
